--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <p class="main-text">
                         There are two main ways in which pedestrians can be represented in computer simulation models.
                         Macroscopic models reproduce crowd behaviour by simulating a group of pedestrians as a fluid. An
-                        example of a macroscopic model is the Hydraulic Model –<a
+                        example of a macroscopic model is the Hydraulic Model – <a
                             href="https://hydraulic-model-visualisation.herokuapp.com/indexplaceholder.html"
                             target="_blank"> see the Hydraulic Model
                             Visualisation</a> for a more detailed explanation of this kind of simulation model.
@@ -150,8 +150,7 @@
                         evacuated the building, or moved to another safe location. This parameter is particularly useful
                         for evaluating the fire safety of buildings through performance-based design concepts [<a
                             href="https://reaxengineering.com/fire-protection-engineering/performance-based-design/"
-                            target="_blank">link
-                            to further explanation of PBD &amp; fire safety</a>].
+                            target="_blank">furhter information about PBD &amp; fire safety</a>].
                     </p>
                 </div>
 
@@ -169,7 +168,7 @@
                         <p class="main-text">
                             Pedestrians in a CA model are represented as ‘agents’ that have the ability to move and make
                             decisions individually, rather than as part of a larger crowd. But how is the environment
-                            upon which these agents move in a CA model represented? Well –the clue is in the name!
+                            upon which these agents move in a CA model represented? Well – the clue is in the name!
                         </p>
                         <p class="main-text">
                             In a CA model the environment is represented as a set of cells. Any 2-dimensional building
@@ -225,7 +224,7 @@
                         <p class="main-text">
                             But how do agents in a CA model determine which direction they need to move in? One popular
                             method of accomplishing this is through the concept of a <b>distance map</b>, also known as
-                            a <b>floor field</b>. Thedistance map, or floor field,represents the space using numerical
+                            a <b>floor field</b>. The distance map, or floor field, represents the space using numerical
                             values
                             assigned to the cells in the model, according to the total travel distance needed to reach
                             the target from that particular cell. The map only has to be calculated once at the
@@ -251,16 +250,16 @@
                         <img src="assets/NeighouringCellsTransitionRules.png"
                             alt="Grid of cells displaying transition rules" width="250" height="250" class="center">
                         <p class="main-text">
-                            For example, the agen tin this cellular automata model could move to the cell directly to
+                            For example, the agent in this cellular automata model could move to the cell directly to
                             its
                             left, or to the cell above it and to the left. Both of these cells are the same distance
                             away
-                            from the exit, so a transition rule is required to determine which of these cell the agent
+                            from the exit, so a transition rule is required to determine which of these cells the agent
                             will move into on this timestep of the model.
                         </p>
                         <p class="main-text">
                             Of course, in many cases, rooms and other areas inside buildings will not have completely
-                            clear paths that allows people to walk directly towards an exit. There are likely to be
+                            clear paths allowing people to walk directly towards an exit. There are likely to be
                             obstacles in their way, which will block them from moving in certain areas in the room. A CA
                             model is able to represent these obstacles by not allowing agents to move into certain
                             cells. The presence of obstacles will also affect the calculation of the distance map in the
@@ -270,7 +269,7 @@
                         <img src="assets/pg3_agents_obstacle.jpg" alt="Trajectory of agents around an obstacle"
                             width="350" height="281" class="center">
                         <p class="main-text">
-                            The diagram above (Varas et al., 2007) shows the trajectory of two agents(grey circles) in a
+                            The diagram above (Varas et al., 2007) shows the trajectory of two agents (grey circles) in a
                             CA model moving around an obstacle located in front of anexit door. The distance map
                             calculated for this geometry ensures the pedestrians move around the object, whilst still
                             taking the most direct path towards the exit.
@@ -337,8 +336,7 @@
                         <p class="main-text">
                             The CA model presented in this visualisation is a very basic kind of CA model. It could be
                             extended or upgraded in various ways, in order to make the agent’s behaviour, or the way
-                            they
-                            interact with the environment, more realistic.
+                            they interact with the environment, more realistic.
                         </p>
                         <p class="main-text">
                             One way in which a CA model can be extended is to define each agent in the model to have
@@ -364,8 +362,8 @@
                         <ul>
                             <li>Evacuation Modelling Trends (2016), Springer International. Eds: Cuesta, A., Abreu, O.,
                                 and Alvear, D. ISBN: 978-3-319-20707-0</li>
-                            <li>Kuligowski, E. D. and Peacock, R. (2005) A Review of Building Evacuation Models.</li>
-                            <li>Vermuyten, H. et al.(2016) ‘A review of optimisation models for pedestrian evacuation
+                            <li>Kuligowski, E.D. and Peacock, R. (2005) A Review of Building Evacuation Models.</li>
+                            <li>Vermuyten, H. et al. (2016) ‘A review of optimisation models for pedestrian evacuation
                                 and design problems’, Safety Science. Elsevier Ltd, 87, pp. 167–178. doi:
                                 10.1016/j.ssci.2016.04.001.</li>
                             <li>Yang, L., Fang, W., Huang, R., and Deng, Z. (2002) ‘Occupant evacuation model based on
@@ -378,16 +376,16 @@
                             <li>Klüpfel, H. and Meyer-König, T. (2005) ‘Simulation of the Evacuation of a Football
                                 Stadium Using the CA Model PedGo’, Traffic and Granular Flow ’03, pp. 423–428--. doi:
                                 10.1007/3-540-28091-x_43.</li>
-                            <li>Wang, J. et al.(2015) ‘Modeling and simulating for congestion pedestrian evacuation with
+                            <li>Wang, J. et al. (2015) ‘Modeling and simulating for congestion pedestrian evacuation with
                                 panic’, Physica A: Statistical Mechanics and its Applications. Elsevier B.V., 428, pp.
                                 396–409. doi: 10.1016/j.physa.2015.01.057.</li>
-                            <li>Manley, M. et al.(2011) ‘Modeling Emergency Evacuation of Individuals with Disabilities
+                            <li>Manley, M. et al. (2011) ‘Modeling Emergency Evacuation of Individuals with Disabilities
                                 in a Densely Populated Airport’, Transportation Research Record: Journal of the
                                 Transportation Research Board, 2206, pp. 32–38. doi: 10.3141/2206-05.</li>
                             <li>Nugraha, Blainey & Nash (2020)‘On the consistency of urban cellular automata models
                                 based on hexagonal and square cells’Environment and Planning B: Urban Analytics and City
                                 Science0(0) 1-16</li>
-                            <li>Varas, A., Cornejo, M.D., Mainemer, D., Toledo, B., Rogan, J., Munoz, V., Valdiva, J.A.
+                            <li>Varas, A., Cornejo, M.D., Mainemer, D., Toledo, B., Rogan, J., Munoz, V., Valdiva, J.A. 
                                 (2007), ‘Cellular automaton model for evacuation process with obstacles’, Physica A:
                                 Statistical Mechanics and its Applications, 382 (2) pp.631-642
                                 https://doi.org/10.1016/j.physa.2007.04.006</li>
